<resources>
    <string name="app_name">Mini Stockbit App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_masuk">Masuk</string>
    <string name="text_masuk_dengan_google">Masuk dengan Google</string>
    <string name="text_masuk_dengan_facebook">Masuk dengan Facebook</string>
    <string name="text_atau">Atau</string>
    <string name="hint_username_atau_email">Username atau Email</string>
    <string name="hint_password">Password</string>
    <string name="text_lupa_password">Lupa Password</string>
    <string name="text_login">Login</string>
    <string name="text_masuk_dengan_fingerprint">Masuk dengan Fingerprint</string>
    <string name="title_support">Support</string>
    <string name="text_belum_punya_akun">Belum Punya Akun?</string>
    <string name="text_daftar_sekarang">Daftar Sekarang</string>
    <string name="title_empty">No Data</string>
    <string name="message_empty">No Data to be Shown</string>
    <string name="label_error">Error Occurred</string>
    <string name="error_message">Unknown Error Occurred</string>
    <string name="action_retry">Retry</string>
    <string name="label_no_data">- No Data -</string>
    <string name="message_logging_in">Logging In</string>
    <string name="message_confirm_logout">Anda yakin ingin logout ?</string>
    <string name="message_success">Success</string>
    <string name="sample_password">12341234</string>
    <string name="title_logout">Logout</string>
</resources>