<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.LoginFragment">

    <TextView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:background="?selectableItemBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvMasuk"
        app:layout_constraintBottom_toBottomOf="@id/tvMasuk"
        android:drawableLeft="@drawable/ic_baseline_arrow_back_ios_24"/>

    <TextView
        android:id="@+id/btnSupport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:background="?selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvMasuk"
        app:layout_constraintBottom_toBottomOf="@id/tvMasuk"
        android:drawableLeft="@drawable/ic_baseline_support_agent_24"/>

    <TextView
        android:id="@+id/tvMasuk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/text_masuk"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGoogleSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="15dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/google_logo"
        android:text="@string/text_masuk_dengan_google"
        android:textColor="@color/black"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/tvMasuk"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFacebookSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/fb_logo"
        android:text="@string/text_masuk_dengan_facebook"
        android:textColor="@color/black"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/btnGoogleSignIn"/>

    <View
        android:id="@+id/divider1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toTopOf="@id/tvAtau"
        app:layout_constraintBottom_toBottomOf="@id/tvAtau"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvAtau"
        android:background="@color/boulder"/>

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toTopOf="@id/tvAtau"
        app:layout_constraintBottom_toBottomOf="@id/tvAtau"
        app:layout_constraintStart_toEndOf="@id/tvAtau"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/boulder"/>

    <TextView
        android:id="@+id/tvAtau"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/divider1"
        app:layout_constraintEnd_toStartOf="@id/divider2"
        android:layout_marginTop="15dp"
        android:text="@string/text_atau"
        app:layout_constraintTop_toBottomOf="@id/btnFacebookSignIn"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="15dp"
        style="@style/Widget.Design.TextInputLayout"
        app:layout_constraintTop_toBottomOf="@id/tvAtau">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvAtau"
            android:hint="@string/hint_username_atau_email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        app:passwordToggleEnabled="true"
        style="@style/Widget.Design.TextInputLayout"
        app:layout_constraintTop_toBottomOf="@id/tilUsername">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edtUsername"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLupaPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:background="@android:color/transparent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilPassword"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/text_lupa_password"
        android:textColor="@color/green"
        android:textAllCaps="false"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLupaPassword"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/text_login"
        android:textAllCaps="false"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLoginFingerprint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"
        app:strokeColor="@color/green"
        app:strokeWidth="1dp"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/text_masuk_dengan_fingerprint"
        android:textColor="@color/green"
        android:textAllCaps="false"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glMiddle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvBelumPunyaAkun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintTop_toBottomOf="@id/btnLoginFingerprint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/glMiddle"
        android:text="Belum Punya Akun?"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvDaftarSekarang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="5dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toBottomOf="@id/btnLoginFingerprint"
        app:layout_constraintStart_toEndOf="@id/glMiddle"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="Daftar Sekarang"
        android:textColor="@color/green"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>